# GW2-Nexus---Pathing

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: MarkerRenderer.cpp  MarkerRenderer.h  MathUtils.h  PackManager.cpp  PackManager.h  Settings.cpp  Settings.h  Shared.cpp  Shared.h  TacoPack.h  TacoParser.cpp  TacoParser.h  UI.cpp  UI.h  entry.cpp  resources.rc.in
